<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <!-- Item Name EditText -->
    <EditText
        android:id="@+id/item_name_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_name_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Item Price EditText -->
    <EditText
        android:id="@+id/item_price_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_price_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_name_input"
        android:inputType="numberDecimal" />

    <!-- Item Quantity EditText -->
    <EditText
        android:id="@+id/item_quantity_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/item_quantity_placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_price_input"
        android:inputType="number" />

    <!-- Add Task Button -->
    <Button
        android:id="@+id/add_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_add"
        app:layout_constraintTop_toBottomOf="@id/item_quantity_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Cancel Button -->
    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/add_item_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
